Add initial RO-Crate HTML preview generation
The ro-crate-preview.html will also be a part of the ro-crate-metadata.zip alongside the ro-crate-metadata.json (and the files in the dataset) when the RO-Crate is downloaded.